--- a/style.css
+++ b/style.css
@@ -34,11 +34,11 @@ body {
 .task-row-wrapper {
   display: flex;
 }
-ul {
+.task-list {
   margin:0;
   padding: 0px;
 }
-li, h3 {
+.task-item, h3 {
   list-style:none;
 }
 input,button{
@@ -93,7 +93,7 @@ input#new-task {
 }
 
 /* Task list */
-li {
+.task-item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -102,20 +102,20 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.task-item > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.task-item > input[type="checkbox"] {
   margin: 0 10px;
 }
-li > label {
+.task-item > label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
+.task-item >    input[type="text"] {
   width: 226px
 }
 button.task-delete img {
@@ -128,21 +128,21 @@ button.task-delete img:hover {
 }
 
 /* Completed */
-ul#completed-tasks label {
+.task-list#completed-tasks label {
   text-decoration: line-through
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.task-list .task-item input[type=text] {
   display:none
 }
 
-ul li.editMode input[type=text] {
+.task-list .task-item.editMode input[type=text] {
   display:inline-block;
   width:224px
 }
 
-ul li.editMode label {
+.task-list .task-item.editMode label {
   display:none;
 }
