--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 .task-text {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .task-row-wrapper {
@@ -130,7 +130,7 @@ input#new-task {
 }
 
 .task-item > input[type="text"] {
-  width: 226px
+  width: 226px;
 }
 
 button.task-delete img {
@@ -145,18 +145,18 @@ button.task-delete img:hover {
 
 /* Completed */
 .task-list#completed-tasks label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .task-list .task-item input[type=text] {
-  display: none
+  display: none;
 }
 
 .task-list .task-item.editMode input[type=text] {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .task-list .task-item.editMode label {
