--- a/style.css
+++ b/style.css
@@ -4,15 +4,18 @@ body {
   color: #333;
   font-family: Lato, sans-serif;
 }
+
 .header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
+
 .header img {
   width: 100%;
 }
+
 .header .more-info {
   font-family: fantasy, cursive;
 }
@@ -28,6 +31,7 @@ body {
   width: 500px;
   margin: 0 auto 0;
 }
+
 .task-text {
   width: 56%;
   display: inline-block;
@@ -43,11 +47,13 @@ body {
   padding: 0px;
 }
 
-.task-item, h3 {
+.task-item,
+h3 {
   list-style: none;
 }
 
-input,button {
+input,
+button {
   outline: none;
 }
 
@@ -64,6 +70,7 @@ button {
 button:hover {
   color: #3a3a3a;
 }
+
 /* Heading */
 h3,
 label[for="new-task"] {
